V_2.0_SLCL/SLCL/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    KEYWORD
    NEWLINE

Grammar

Rule 0     S' -> statement_list
Rule 1     statement_list -> statement
Rule 2     statement_list -> statement_list statement
Rule 3     statement -> variable
Rule 4     statement -> expression
Rule 5     statement -> if_statement
Rule 6     statement -> BREAK SEMICOLON
Rule 7     statement -> PRINT COLON OPEN_PAREN arguments CLOSE_PAREN SEMICOLON
Rule 8     statement -> variable PLUS_EQ expression SEMICOLON
Rule 9     statement -> variable MINUS_EQ expression SEMICOLON
Rule 10    statement -> variable MULT_EQ expression SEMICOLON
Rule 11    statement -> WHILE COLON expression OPEN_KEY statement_list CLOSE_KEY
Rule 12    statement -> FOR COLON OPEN_KEY statement_list CLOSE_KEY
Rule 13    statement -> FUNCTION variable OPEN_PAREN arguments CLOSE_PAREN OPEN_KEY statement_list CLOSE_KEY
Rule 14    statement -> FUNCTION variable OPEN_KEY statement_list CLOSE_KEY
Rule 15    statement -> RETURN expression SEMICOLON
Rule 16    expression -> variable OPEN_PAREN arguments CLOSE_PAREN
Rule 17    statement -> variable OPEN_PAREN arguments CLOSE_PAREN SEMICOLON
Rule 18    variable -> VARIABLE
Rule 19    expression -> expression PLUS expression
Rule 20    expression -> expression MINUS expression
Rule 21    expression -> expression MULT expression
Rule 22    expression -> expression DIV expression
Rule 23    expression -> expression EXP expression
Rule 24    expression -> expression MOD expression
Rule 25    expression -> expression BIT_AND expression
Rule 26    expression -> expression BIT_OR expression
Rule 27    expression -> expression BIT_XOR expression
Rule 28    expression -> PLUS expression
Rule 29    expression -> MINUS expression
Rule 30    expression -> BIT_NEG expression
Rule 31    expression -> NOT expression
Rule 32    expression -> OPEN_PAREN expression CLOSE_PAREN
Rule 33    expression -> variable ASSIGN assignable SEMICOLON
Rule 34    if_statement -> IF COLON expression OPEN_KEY statement_list CLOSE_KEY
Rule 35    if_statement -> IF COLON expression OPEN_KEY statement_list CLOSE_KEY ELSE COLON OPEN_KEY statement_list CLOSE_KEY
Rule 36    if_statement -> IF COLON expression OPEN_KEY statement_list CLOSE_KEY ELSE COLON if_statement
Rule 37    primitive -> NUM_INT
Rule 38    primitive -> NUM_FLOAT
Rule 39    primitive -> STRING
Rule 40    primitive -> boolean
Rule 41    boolean -> TRUE
Rule 42    boolean -> FALSE
Rule 43    boolean -> expression EQUAL_TO expression
Rule 44    boolean -> expression DIFF expression
Rule 45    boolean -> expression GREATER_THAN expression
Rule 46    boolean -> expression GREATER_THAN_EQUAL expression
Rule 47    boolean -> expression LESS_THAN expression
Rule 48    boolean -> expression LESS_THAN_EQUAL expression
Rule 49    boolean -> expression AND expression
Rule 50    boolean -> expression OR expression
Rule 51    assignable -> primitive
Rule 52    assignable -> expression
Rule 53    arguments -> arguments COMMA expression
Rule 54    arguments -> expression
Rule 55    arguments -> <empty>
Rule 56    expression -> primitive
Rule 57    expression -> STRING
Rule 58    expression -> variable

Terminals, with rules where they appear

AND                  : 49
ASSIGN               : 33
BIT_AND              : 25
BIT_NEG              : 30
BIT_OR               : 26
BIT_XOR              : 27
BREAK                : 6
CLOSE_KEY            : 11 12 13 14 34 35 35 36
CLOSE_PAREN          : 7 13 16 17 32
COLON                : 7 11 12 34 35 35 36 36
COMMA                : 53
DIFF                 : 44
DIV                  : 22
ELSE                 : 35 36
EQUAL_TO             : 43
EXP                  : 23
FALSE                : 42
FOR                  : 12
FUNCTION             : 13 14
GREATER_THAN         : 45
GREATER_THAN_EQUAL   : 46
IF                   : 34 35 36
KEYWORD              : 
LESS_THAN            : 47
LESS_THAN_EQUAL      : 48
MINUS                : 20 29
MINUS_EQ             : 9
MOD                  : 24
MULT                 : 21
MULT_EQ              : 10
NEWLINE              : 
NOT                  : 31
NUM_FLOAT            : 38
NUM_INT              : 37
OPEN_KEY             : 11 12 13 14 34 35 35 36
OPEN_PAREN           : 7 13 16 17 32
OR                   : 50
PLUS                 : 19 28
PLUS_EQ              : 8
PRINT                : 7
RETURN               : 15
SEMICOLON            : 6 7 8 9 10 15 17 33
STRING               : 39 57
TRUE                 : 41
VARIABLE             : 18
WHILE                : 11
error                : 

Nonterminals, with rules where they appear

arguments            : 7 13 16 17 53
assignable           : 33
boolean              : 40
expression           : 4 8 9 10 11 15 19 19 20 20 21 21 22 22 23 23 24 24 25 25 26 26 27 27 28 29 30 31 32 34 35 36 43 43 44 44 45 45 46 46 47 47 48 48 49 49 50 50 52 53 54
if_statement         : 5 36
primitive            : 51 56
statement            : 1 2
statement_list       : 2 11 12 13 14 34 35 35 36 0
variable             : 3 8 9 10 13 14 16 17 33 58

Parsing method: LALR

state 0

    (0) S' -> . statement_list
    (1) statement_list -> . statement
    (2) statement_list -> . statement_list statement
    (3) statement -> . variable
    (4) statement -> . expression
    (5) statement -> . if_statement
    (6) statement -> . BREAK SEMICOLON
    (7) statement -> . PRINT COLON OPEN_PAREN arguments CLOSE_PAREN SEMICOLON
    (8) statement -> . variable PLUS_EQ expression SEMICOLON
    (9) statement -> . variable MINUS_EQ expression SEMICOLON
    (10) statement -> . variable MULT_EQ expression SEMICOLON
    (11) statement -> . WHILE COLON expression OPEN_KEY statement_list CLOSE_KEY
    (12) statement -> . FOR COLON OPEN_KEY statement_list CLOSE_KEY
    (13) statement -> . FUNCTION variable OPEN_PAREN arguments CLOSE_PAREN OPEN_KEY statement_list CLOSE_KEY
    (14) statement -> . FUNCTION variable OPEN_KEY statement_list CLOSE_KEY
    (15) statement -> . RETURN expression SEMICOLON
    (17) statement -> . variable OPEN_PAREN arguments CLOSE_PAREN SEMICOLON
    (18) variable -> . VARIABLE
    (16) expression -> . variable OPEN_PAREN arguments CLOSE_PAREN
    (19) expression -> . expression PLUS expression
    (20) expression -> . expression MINUS expression
    (21) expression -> . expression MULT expression
    (22) expression -> . expression DIV expression
    (23) expression -> . expression EXP expression
    (24) expression -> . expression MOD expression
    (25) expression -> . expression BIT_AND expression
    (26) expression -> . expression BIT_OR expression
    (27) expression -> . expression BIT_XOR expression
    (28) expression -> . PLUS expression
    (29) expression -> . MINUS expression
    (30) expression -> . BIT_NEG expression
    (31) expression -> . NOT expression
    (32) expression -> . OPEN_PAREN expression CLOSE_PAREN
    (33) expression -> . variable ASSIGN assignable SEMICOLON
    (56) expression -> . primitive
    (57) expression -> . STRING
    (58) expression -> . variable
    (34) if_statement -> . IF COLON expression OPEN_KEY statement_list CLOSE_KEY
    (35) if_statement -> . IF COLON expression OPEN_KEY statement_list CLOSE_KEY ELSE COLON OPEN_KEY statement_list CLOSE_KEY
    (36) if_statement -> . IF COLON expression OPEN_KEY statement_list CLOSE_KEY ELSE COLON if_statement
    (37) primitive -> . NUM_INT
    (38) primitive -> . NUM_FLOAT
    (39) primitive -> . STRING
    (40) primitive -> . boolean
    (41) boolean -> . TRUE
    (42) boolean -> . FALSE
    (43) boolean -> . expression EQUAL_TO expression
    (44) boolean -> . expression DIFF expression
    (45) boolean -> . expression GREATER_THAN expression
    (46) boolean -> . expression GREATER_THAN_EQUAL expression
    (47) boolean -> . expression LESS_THAN expression
    (48) boolean -> . expression LESS_THAN_EQUAL expression
    (49) boolean -> . expression AND expression
    (50) boolean -> . expression OR expression

    BREAK           shift and go to state 6
    PRINT           shift and go to state 7
    WHILE           shift and go to state 9
    FOR             shift and go to state 10
    FUNCTION        shift and go to state 11
    RETURN          shift and go to state 12
    VARIABLE        shift and go to state 13
    PLUS            shift and go to state 14
    MINUS           shift and go to state 15
    BIT_NEG         shift and go to state 16
    NOT             shift and go to state 17
    OPEN_PAREN      shift and go to state 8
    STRING          shift and go to state 19
    IF              shift and go to state 20
    NUM_INT         shift and go to state 21
    NUM_FLOAT       shift and go to state 22
    TRUE            shift and go to state 24
    FALSE           shift and go to state 25

    statement_list                 shift and go to state 1
    statement                      shift and go to state 2
    variable                       shift and go to state 3
    expression                     shift and go to state 4
    if_statement                   shift and go to state 5
    primitive                      shift and go to state 18
    boolean                        shift and go to state 23

state 1

    (0) S' -> statement_list .
    (2) statement_list -> statement_list . statement
    (3) statement -> . variable
    (4) statement -> . expression
    (5) statement -> . if_statement
    (6) statement -> . BREAK SEMICOLON
    (7) statement -> . PRINT COLON OPEN_PAREN arguments CLOSE_PAREN SEMICOLON
    (8) statement -> . variable PLUS_EQ expression SEMICOLON
    (9) statement -> . variable MINUS_EQ expression SEMICOLON
    (10) statement -> . variable MULT_EQ expression SEMICOLON
    (11) statement -> . WHILE COLON expression OPEN_KEY statement_list CLOSE_KEY
    (12) statement -> . FOR COLON OPEN_KEY statement_list CLOSE_KEY
    (13) statement -> . FUNCTION variable OPEN_PAREN arguments CLOSE_PAREN OPEN_KEY statement_list CLOSE_KEY
    (14) statement -> . FUNCTION variable OPEN_KEY statement_list CLOSE_KEY
    (15) statement -> . RETURN expression SEMICOLON
    (17) statement -> . variable OPEN_PAREN arguments CLOSE_PAREN SEMICOLON
    (18) variable -> . VARIABLE
    (16) expression -> . variable OPEN_PAREN arguments CLOSE_PAREN
    (19) expression -> . expression PLUS expression
    (20) expression -> . expression MINUS expression
    (21) expression -> . expression MULT expression
    (22) expression -> . expression DIV expression
    (23) expression -> . expression EXP expression
    (24) expression -> . expression MOD expression
    (25) expression -> . expression BIT_AND expression
    (26) expression -> . expression BIT_OR expression
    (27) expression -> . expression BIT_XOR expression
    (28) expression -> . PLUS expression
    (29) expression -> . MINUS expression
    (30) expression -> . BIT_NEG expression
    (31) expression -> . NOT expression
    (32) expression -> . OPEN_PAREN expression CLOSE_PAREN
    (33) expression -> . variable ASSIGN assignable SEMICOLON
    (56) expression -> . primitive
    (57) expression -> . STRING
    (58) expression -> . variable
    (34) if_statement -> . IF COLON expression OPEN_KEY statement_list CLOSE_KEY
    (35) if_statement -> . IF COLON expression OPEN_KEY statement_list CLOSE_KEY ELSE COLON OPEN_KEY statement_list CLOSE_KEY
    (36) if_statement -> . IF COLON expression OPEN_KEY statement_list CLOSE_KEY ELSE COLON if_statement
    (37) primitive -> . NUM_INT
    (38) primitive -> . NUM_FLOAT
    (39) primitive -> . STRING
    (40) primitive -> . boolean
    (41) boolean -> . TRUE
    (42) boolean -> . FALSE
    (43) boolean -> . expression EQUAL_TO expression
    (44) boolean -> . expression DIFF expression
    (45) boolean -> . expression GREATER_THAN expression
    (46) boolean -> . expression GREATER_THAN_EQUAL expression
    (47) boolean -> . expression LESS_THAN expression
    (48) boolean -> . expression LESS_THAN_EQUAL expression
    (49) boolean -> . expression AND expression
    (50) boolean -> . expression OR expression

    BREAK           shift and go to state 6
    PRINT           shift and go to state 7
    WHILE           shift and go to state 9
    FOR             shift and go to state 10
    FUNCTION        shift and go to state 11
    RETURN          shift and go to state 12
    VARIABLE        shift and go to state 13
    PLUS            shift and go to state 14
    MINUS           shift and go to state 15
    BIT_NEG         shift and go to state 16
    NOT             shift and go to state 17
    OPEN_PAREN      shift and go to state 8
    STRING          shift and go to state 19
    IF              shift and go to state 20
    NUM_INT         shift and go to state 21
    NUM_FLOAT       shift and go to state 22
    TRUE            shift and go to state 24
    FALSE           shift and go to state 25

    statement                      shift and go to state 26
    variable                       shift and go to state 3
    expression                     shift and go to state 4
    if_statement                   shift and go to state 5
    primitive                      shift and go to state 18
    boolean                        shift and go to state 23

state 2

    (1) statement_list -> statement .

    BREAK           reduce using rule 1 (statement_list -> statement .)
    PRINT           reduce using rule 1 (statement_list -> statement .)
    WHILE           reduce using rule 1 (statement_list -> statement .)
    FOR             reduce using rule 1 (statement_list -> statement .)
    FUNCTION        reduce using rule 1 (statement_list -> statement .)
    RETURN          reduce using rule 1 (statement_list -> statement .)
    VARIABLE        reduce using rule 1 (statement_list -> statement .)
    PLUS            reduce using rule 1 (statement_list -> statement .)
    MINUS           reduce using rule 1 (statement_list -> statement .)
    BIT_NEG         reduce using rule 1 (statement_list -> statement .)
    NOT             reduce using rule 1 (statement_list -> statement .)
    OPEN_PAREN      reduce using rule 1 (statement_list -> statement .)
    STRING          reduce using rule 1 (statement_list -> statement .)
    IF              reduce using rule 1 (statement_list -> statement .)
    NUM_INT         reduce using rule 1 (statement_list -> statement .)
    NUM_FLOAT       reduce using rule 1 (statement_list -> statement .)
    TRUE            reduce using rule 1 (statement_list -> statement .)
    FALSE           reduce using rule 1 (statement_list -> statement .)
    $end            reduce using rule 1 (statement_list -> statement .)
    CLOSE_KEY       reduce using rule 1 (statement_list -> statement .)


state 3

    (3) statement -> variable .
    (8) statement -> variable . PLUS_EQ expression SEMICOLON
    (9) statement -> variable . MINUS_EQ expression SEMICOLON
    (10) statement -> variable . MULT_EQ expression SEMICOLON
    (17) statement -> variable . OPEN_PAREN arguments CLOSE_PAREN SEMICOLON
    (16) expression -> variable . OPEN_PAREN arguments CLOSE_PAREN
    (33) expression -> variable . ASSIGN assignable SEMICOLON
    (58) expression -> variable .

  ! shift/reduce conflict for OPEN_PAREN resolved as shift
  ! reduce/reduce conflict for PLUS resolved using rule 3 (statement -> variable .)
  ! reduce/reduce conflict for MINUS resolved using rule 3 (statement -> variable .)
  ! reduce/reduce conflict for BREAK resolved using rule 3 (statement -> variable .)
  ! reduce/reduce conflict for PRINT resolved using rule 3 (statement -> variable .)
  ! reduce/reduce conflict for WHILE resolved using rule 3 (statement -> variable .)
  ! reduce/reduce conflict for FOR resolved using rule 3 (statement -> variable .)
  ! reduce/reduce conflict for FUNCTION resolved using rule 3 (statement -> variable .)
  ! reduce/reduce conflict for RETURN resolved using rule 3 (statement -> variable .)
  ! reduce/reduce conflict for VARIABLE resolved using rule 3 (statement -> variable .)
  ! reduce/reduce conflict for BIT_NEG resolved using rule 3 (statement -> variable .)
  ! reduce/reduce conflict for NOT resolved using rule 3 (statement -> variable .)
  ! shift/reduce conflict for OPEN_PAREN resolved as shift
  ! reduce/reduce conflict for STRING resolved using rule 3 (statement -> variable .)
  ! reduce/reduce conflict for IF resolved using rule 3 (statement -> variable .)
  ! reduce/reduce conflict for NUM_INT resolved using rule 3 (statement -> variable .)
  ! reduce/reduce conflict for NUM_FLOAT resolved using rule 3 (statement -> variable .)
  ! reduce/reduce conflict for TRUE resolved using rule 3 (statement -> variable .)
  ! reduce/reduce conflict for FALSE resolved using rule 3 (statement -> variable .)
  ! reduce/reduce conflict for $end resolved using rule 3 (statement -> variable .)
  ! reduce/reduce conflict for CLOSE_KEY resolved using rule 3 (statement -> variable .)
    BREAK           reduce using rule 3 (statement -> variable .)
    PRINT           reduce using rule 3 (statement -> variable .)
    WHILE           reduce using rule 3 (statement -> variable .)
    FOR             reduce using rule 3 (statement -> variable .)
    FUNCTION        reduce using rule 3 (statement -> variable .)
    RETURN          reduce using rule 3 (statement -> variable .)
    VARIABLE        reduce using rule 3 (statement -> variable .)
    PLUS            reduce using rule 3 (statement -> variable .)
    MINUS           reduce using rule 3 (statement -> variable .)
    BIT_NEG         reduce using rule 3 (statement -> variable .)
    NOT             reduce using rule 3 (statement -> variable .)
    STRING          reduce using rule 3 (statement -> variable .)
    IF              reduce using rule 3 (statement -> variable .)
    NUM_INT         reduce using rule 3 (statement -> variable .)
    NUM_FLOAT       reduce using rule 3 (statement -> variable .)
    TRUE            reduce using rule 3 (statement -> variable .)
    FALSE           reduce using rule 3 (statement -> variable .)
    $end            reduce using rule 3 (statement -> variable .)
    CLOSE_KEY       reduce using rule 3 (statement -> variable .)
    PLUS_EQ         shift and go to state 27
    MINUS_EQ        shift and go to state 28
    MULT_EQ         shift and go to state 29
    OPEN_PAREN      shift and go to state 30
    ASSIGN          shift and go to state 31
    MULT            reduce using rule 58 (expression -> variable .)
    DIV             reduce using rule 58 (expression -> variable .)
    EXP             reduce using rule 58 (expression -> variable .)
    MOD             reduce using rule 58 (expression -> variable .)
    BIT_AND         reduce using rule 58 (expression -> variable .)
    BIT_OR          reduce using rule 58 (expression -> variable .)
    BIT_XOR         reduce using rule 58 (expression -> variable .)
    EQUAL_TO        reduce using rule 58 (expression -> variable .)
    DIFF            reduce using rule 58 (expression -> variable .)
    GREATER_THAN    reduce using rule 58 (expression -> variable .)
    GREATER_THAN_EQUAL reduce using rule 58 (expression -> variable .)
    LESS_THAN       reduce using rule 58 (expression -> variable .)
    LESS_THAN_EQUAL reduce using rule 58 (expression -> variable .)
    AND             reduce using rule 58 (expression -> variable .)
    OR              reduce using rule 58 (expression -> variable .)

  ! OPEN_PAREN      [ reduce using rule 3 (statement -> variable .) ]
  ! PLUS            [ reduce using rule 58 (expression -> variable .) ]
  ! MINUS           [ reduce using rule 58 (expression -> variable .) ]
  ! BREAK           [ reduce using rule 58 (expression -> variable .) ]
  ! PRINT           [ reduce using rule 58 (expression -> variable .) ]
  ! WHILE           [ reduce using rule 58 (expression -> variable .) ]
  ! FOR             [ reduce using rule 58 (expression -> variable .) ]
  ! FUNCTION        [ reduce using rule 58 (expression -> variable .) ]
  ! RETURN          [ reduce using rule 58 (expression -> variable .) ]
  ! VARIABLE        [ reduce using rule 58 (expression -> variable .) ]
  ! BIT_NEG         [ reduce using rule 58 (expression -> variable .) ]
  ! NOT             [ reduce using rule 58 (expression -> variable .) ]
  ! OPEN_PAREN      [ reduce using rule 58 (expression -> variable .) ]
  ! STRING          [ reduce using rule 58 (expression -> variable .) ]
  ! IF              [ reduce using rule 58 (expression -> variable .) ]
  ! NUM_INT         [ reduce using rule 58 (expression -> variable .) ]
  ! NUM_FLOAT       [ reduce using rule 58 (expression -> variable .) ]
  ! TRUE            [ reduce using rule 58 (expression -> variable .) ]
  ! FALSE           [ reduce using rule 58 (expression -> variable .) ]
  ! $end            [ reduce using rule 58 (expression -> variable .) ]
  ! CLOSE_KEY       [ reduce using rule 58 (expression -> variable .) ]


state 4

    (4) statement -> expression .
    (19) expression -> expression . PLUS expression
    (20) expression -> expression . MINUS expression
    (21) expression -> expression . MULT expression
    (22) expression -> expression . DIV expression
    (23) expression -> expression . EXP expression
    (24) expression -> expression . MOD expression
    (25) expression -> expression . BIT_AND expression
    (26) expression -> expression . BIT_OR expression
    (27) expression -> expression . BIT_XOR expression
    (43) boolean -> expression . EQUAL_TO expression
    (44) boolean -> expression . DIFF expression
    (45) boolean -> expression . GREATER_THAN expression
    (46) boolean -> expression . GREATER_THAN_EQUAL expression
    (47) boolean -> expression . LESS_THAN expression
    (48) boolean -> expression . LESS_THAN_EQUAL expression
    (49) boolean -> expression . AND expression
    (50) boolean -> expression . OR expression

  ! shift/reduce conflict for PLUS resolved as shift
  ! shift/reduce conflict for MINUS resolved as shift
    BREAK           reduce using rule 4 (statement -> expression .)
    PRINT           reduce using rule 4 (statement -> expression .)
    WHILE           reduce using rule 4 (statement -> expression .)
    FOR             reduce using rule 4 (statement -> expression .)
    FUNCTION        reduce using rule 4 (statement -> expression .)
    RETURN          reduce using rule 4 (statement -> expression .)
    VARIABLE        reduce using rule 4 (statement -> expression .)
    BIT_NEG         reduce using rule 4 (statement -> expression .)
    NOT             reduce using rule 4 (statement -> expression .)
    OPEN_PAREN      reduce using rule 4 (statement -> expression .)
    STRING          reduce using rule 4 (statement -> expression .)
    IF              reduce using rule 4 (statement -> expression .)
    NUM_INT         reduce using rule 4 (statement -> expression .)
    NUM_FLOAT       reduce using rule 4 (statement -> expression .)
    TRUE            reduce using rule 4 (statement -> expression .)
    FALSE           reduce using rule 4 (statement -> expression .)
    $end            reduce using rule 4 (statement -> expression .)
    CLOSE_KEY       reduce using rule 4 (statement -> expression .)
    PLUS            shift and go to state 32
    MINUS           shift and go to state 33
    MULT            shift and go to state 34
    DIV             shift and go to state 35
    EXP             shift and go to state 36
    MOD             shift and go to state 37
    BIT_AND         shift and go to state 38
    BIT_OR          shift and go to state 39
    BIT_XOR         shift and go to state 40
    EQUAL_TO        shift and go to state 41
    DIFF            shift and go to state 42
    GREATER_THAN    shift and go to state 43
    GREATER_THAN_EQUAL shift and go to state 44
    LESS_THAN       shift and go to state 45
    LESS_THAN_EQUAL shift and go to state 46
    AND             shift and go to state 47
    OR              shift and go to state 48

  ! PLUS            [ reduce using rule 4 (statement -> expression .) ]
  ! MINUS           [ reduce using rule 4 (statement -> expression .) ]


state 5

    (5) statement -> if_statement .

    BREAK           reduce using rule 5 (statement -> if_statement .)
    PRINT           reduce using rule 5 (statement -> if_statement .)
    WHILE           reduce using rule 5 (statement -> if_statement .)
    FOR             reduce using rule 5 (statement -> if_statement .)
    FUNCTION        reduce using rule 5 (statement -> if_statement .)
    RETURN          reduce using rule 5 (statement -> if_statement .)
    VARIABLE        reduce using rule 5 (statement -> if_statement .)
    PLUS            reduce using rule 5 (statement -> if_statement .)
    MINUS           reduce using rule 5 (statement -> if_statement .)
    BIT_NEG         reduce using rule 5 (statement -> if_statement .)
    NOT             reduce using rule 5 (statement -> if_statement .)
    OPEN_PAREN      reduce using rule 5 (statement -> if_statement .)
    STRING          reduce using rule 5 (statement -> if_statement .)
    IF              reduce using rule 5 (statement -> if_statement .)
    NUM_INT         reduce using rule 5 (statement -> if_statement .)
    NUM_FLOAT       reduce using rule 5 (statement -> if_statement .)
    TRUE            reduce using rule 5 (statement -> if_statement .)
    FALSE           reduce using rule 5 (statement -> if_statement .)
    $end            reduce using rule 5 (statement -> if_statement .)
    CLOSE_KEY       reduce using rule 5 (statement -> if_statement .)


state 6

    (6) statement -> BREAK . SEMICOLON

    SEMICOLON       shift and go to state 49


state 7

    (7) statement -> PRINT . COLON OPEN_PAREN arguments CLOSE_PAREN SEMICOLON

    COLON           shift and go to state 50


state 8

    (32) expression -> OPEN_PAREN . expression CLOSE_PAREN
    (16) expression -> . variable OPEN_PAREN arguments CLOSE_PAREN
    (19) expression -> . expression PLUS expression
    (20) expression -> . expression MINUS expression
    (21) expression -> . expression MULT expression
    (22) expression -> . expression DIV expression
    (23) expression -> . expression EXP expression
    (24) expression -> . expression MOD expression
    (25) expression -> . expression BIT_AND expression
    (26) expression -> . expression BIT_OR expression
    (27) expression -> . expression BIT_XOR expression
    (28) expression -> . PLUS expression
    (29) expression -> . MINUS expression
    (30) expression -> . BIT_NEG expression
    (31) expression -> . NOT expression
    (32) expression -> . OPEN_PAREN expression CLOSE_PAREN
    (33) expression -> . variable ASSIGN assignable SEMICOLON
    (56) expression -> . primitive
    (57) expression -> . STRING
    (58) expression -> . variable
    (18) variable -> . VARIABLE
    (37) primitive -> . NUM_INT
    (38) primitive -> . NUM_FLOAT
    (39) primitive -> . STRING
    (40) primitive -> . boolean
    (41) boolean -> . TRUE
    (42) boolean -> . FALSE
    (43) boolean -> . expression EQUAL_TO expression
    (44) boolean -> . expression DIFF expression
    (45) boolean -> . expression GREATER_THAN expression
    (46) boolean -> . expression GREATER_THAN_EQUAL expression
    (47) boolean -> . expression LESS_THAN expression
    (48) boolean -> . expression LESS_THAN_EQUAL expression
    (49) boolean -> . expression AND expression
    (50) boolean -> . expression OR expression

    PLUS            shift and go to state 14
    MINUS           shift and go to state 15
    BIT_NEG         shift and go to state 16
    NOT             shift and go to state 17
    OPEN_PAREN      shift and go to state 8
    STRING          shift and go to state 19
    VARIABLE        shift and go to state 13
    NUM_INT         shift and go to state 21
    NUM_FLOAT       shift and go to state 22
    TRUE            shift and go to state 24
    FALSE           shift and go to state 25

    expression                     shift and go to state 51
    variable                       shift and go to state 52
    primitive                      shift and go to state 18
    boolean                        shift and go to state 23

state 9

    (11) statement -> WHILE . COLON expression OPEN_KEY statement_list CLOSE_KEY

    COLON           shift and go to state 53


state 10

    (12) statement -> FOR . COLON OPEN_KEY statement_list CLOSE_KEY

    COLON           shift and go to state 54


state 11

    (13) statement -> FUNCTION . variable OPEN_PAREN arguments CLOSE_PAREN OPEN_KEY statement_list CLOSE_KEY
    (14) statement -> FUNCTION . variable OPEN_KEY statement_list CLOSE_KEY
    (18) variable -> . VARIABLE

    VARIABLE        shift and go to state 13

    variable                       shift and go to state 55

state 12
